@startuml
hide circle


class Jeu<Singleton> {

}

class Pioche {

}

class Plateau {

}

class Joueur {

}

class Tuile {

}

class Position {

}

class Element {

}
class ElementPre{

}
class ElementVille {

}
class ElementRoute {

}
class ElementRiviere {

}
class ElementAbbaye {

}
class ElementJardin {

}

class Meeple {

}


class Groupement {

}
ElementRiviere--|> Element : herits
ElementRoute  --|> Element : herits
ElementVille  --|>Element : herits
ElementPre  --|>Element : herits
ElementAbbaye  --|>Element : herits
ElementJardin  --|>Element : herits

Jeu "1" *-- "2..6" Joueur
Jeu "1" *- "1" Plateau
Jeu "1" *- "1" Pioche


Joueur "1" *-- "8..10" Meeple

Plateau "1" *- "*" Tuile
Tuile "1" *- "1" Position
Tuile "1" *- "*" Element
Plateau "1" *- "*"Groupement
Element "*" --* "1" Groupement



@enduml
